--- a/auf_savoirs_en_partage_django/media/css/global.css
+++ b/auf_savoirs_en_partage_django/media/css/global.css
@@ -46,7 +46,7 @@ sup{font-size: smaller; vertical-align: 0.5em; line-height: 1px;}
 
 h1 { float:left; width:144px; height:110px; margin-top:25px; margin-left:20px; display:inline;}
 h1 a { display:block; width:144px; height:110px; text-indent:-99999px; background:url(../img/logo-agence-universitaire-de-la-francophonie.gif) no-repeat 0 0;border:none; text-decoration:none;}
-#sous-menu { padding-top:1px; margin-right:0; color:#fff; display:inline; height:24px; width:350px; float:right;}
+#sous-menu { padding-top:1px; margin-right:0; color:#fff; display:inline; height:24px; width:420px; float:right;}
 #sous-menu a { display:block; height:19px; padding:5px 10px 1px 10px; color:#fff; font-size:1.1em; text-decoration:none; float:right; white-space:nowrap; background-color:#4c4030;}
 #sous-menu a:hover { text-decoration:underline;}
 #sous-menu a.bout-gauche { background:#4c4030 url(../img/sous-menu-top-coin-gauche.gif) no-repeat 0 0; padding-right:5px;}
@@ -60,8 +60,9 @@ div.boite-recherche button { position:absolute; top:22px; right:17px; height:45p
 div.boite-recherche button:hover { background:url(../img/recherche-button-over.gif) no-repeat 0 0; cursor:pointer;}
 div.boite-recherche h3 { font-size:2em; font-weight:normal; letter-spacing:-1px; margin: 0;}
 div.boite-recherche h3 span { font-size:.6em; font-weight:normal; letter-spacing: normal;}
-div.boite-recherche a { position:absolute; bottom:13px; left: 0; color:#3a3125;}
-div.boite-recherche a:hover { color:#97012c; text-decoration:none;}
+div.boite-recherche p { position:absolute; bottom:13px; left: 0; color:#3a3125; margin: 0; }
+div.boite-recherche p a { color:#3a3125;}
+div.boite-recherche p a:hover { color:#97012c; text-decoration:none;}
 
 #contenu { width:744px; margin:0; padding:0; margin-top:100px; margin-bottom:50px; margin-left:0;  display:inline; float:left;background:url(../img/contenu-bkg-middle.png) repeat-y 0 0;}
 #contenu h4 {padding: 0 25px; margin-bottom:1.2em; font-size:2.2em; font-weight:normal; letter-spacing:-1px;}
@@ -134,3 +135,13 @@ ul.liste-de-l-accueil .le-resume a { display:inline;}
 .clearfix:after, .container:after { content: "."; display: block; height: 0; clear: both; visibility: hidden;}
 * html .clearfix { height: 1%; }
 .clearfix { display: block; }
+
+#edit-form td { vertical-align: top; }
+#edit-form td:first-child { width: 150px; text-align: left; }
+#edit-form table { width: 100%; }
+#edit-form input, #edit-form textarea { width: 80%; }
+#edit-form textarea { height: 100px; }
+#edit-form p { margin-bottom: 2px; }
+#edit-form tr { border-top: 1px black solid; }
+#edit-form tr:first-child { border-top: none; }
+
