--- a/auf_savoirs_en_partage_django/templates/container_base.html
+++ b/auf_savoirs_en_partage_django/templates/container_base.html
@@ -28,7 +28,13 @@
                 </h1>
 
                 <div id="sous-menu" class="clearfix">
-                    <a href="{% url savoirs.views.nous_contacter %}" class="bout-droit">Nous contacter</a>
+                    {% if user.is_authenticated %}
+                    <a href="{% url django.contrib.auth.views.logout %}" class="bout-droit">Déconnexion</a>
+                    {% else %}
+                    <a href="{% url django.contrib.auth.views.login %}" class="bout-droit">Connexion</a>
+                    {% endif %}
+                    <span>|</span>
+                    <a href="{% url savoirs.views.nous_contacter %}">Nous contacter</a>
                     <span>|</span>
                     <a href="{% url savoirs.views.a_propos %}">À propos de</a>
                     <span>|</span>
@@ -55,7 +61,10 @@
                             <button title="Lancer la recherche" type="submit">&nbsp;</button>
                         </form>
 
-                        <a href="{% url savoirs.views.conseils %}">Conseils pour la recherche</a>
+                        <p>
+                        <a href="#">Recherche avancée</a> | 
+                        <a href="{% url savoirs.views.conseils %}">Conseils</a>
+                        </p>
                     </div>
                 </div>
                 <div id="contenu" class="clearfix">
