--- a/auf_savoirs_en_partage_django/media/css/global.css
+++ b/auf_savoirs_en_partage_django/media/css/global.css
@@ -65,6 +65,7 @@ div.boite-recherche p a { color:#3a3125;}
 div.boite-recherche p a:hover { color:#97012c; text-decoration:none;}
 
 #contenu { width:744px; margin:0; padding:0; margin-top:100px; margin-bottom:50px; margin-left:0;  display:inline; float:left;background:url(../img/contenu-bkg-middle.png) repeat-y 0 0;}
+#tabs { margin-left: 8px; margin-right: 8px; }
 #contenu h4 {padding: 0 25px; margin-bottom:1.2em; font-size:2.2em; font-weight:normal; letter-spacing:-1px;}
 #contenu .zone-texte {padding: 0 25px; font-size: 1.2em; min-height: 375px;}
 #contenu .zone-texte ul li {list-style: disc; margin: 0 0 .25em;}
