--- a/auf_savoirs_en_partage_django/media/css/global.css
+++ b/auf_savoirs_en_partage_django/media/css/global.css
@@ -40,6 +40,7 @@ ul, ol{margin:0 0 1em 33px;list-style:none;}
 dt{margin:0.5em 0 0;}
 dd{margin:0.25em 0 0.5em 2.5em;}
 sup{font-size: smaller; vertical-align: 0.5em; line-height: 1px;}
+.lbl {color: #97012c; }
 
 #fond {padding:0; margin:0; display:block; position:relative; width:100%; height:auto !important; height:100%; min-height:100%; background: url(../img/background-fond.jpg) no-repeat 50% 0; text-align:left;}
 #enrobage {padding:0; margin:0 auto; display:block; position:relative; width:960px; height:auto !important; height:100%; min-height:100%;}
