--- a/auf_savoirs_en_partage_django/templates/menu.html
+++ b/auf_savoirs_en_partage_django/templates/menu.html
@@ -1,6 +1,6 @@
 <ul>
     {% for d in disciplines %}
-    <li><a href="{% url savoirs.views.recherche %}?q={{ d.nom }}">{{ d.nom }}</a></li>
+    <li><a href="{% url savoirs.views.avancee %}?type=avancee&operator=or&subject={{ d.nom }}">{{ d.nom }}</a></li>
     {% endfor %}
 </ul>
 
