Ajout de la liste des sources, closes #187

--- a/auf_savoirs_en_partage_django/templates/savoirs/a-propos.html
+++ b/auf_savoirs_en_partage_django/templates/savoirs/a-propos.html
@@ -15,8 +15,7 @@ thématiques confondues) de la communauté universitaire, à partir
 du moment où elles sont conduites en partenariat avec l'Agence.</span></p>
 <p style="margin-bottom: 0cm;"><span style="color: #000000;">&nbsp;</span></p>
 <p style="margin-bottom: 0cm;"><span style="color: #000000;">Le champ couvert
-par ce site recouvre actuellement plus de <span style="color: #bf153e;"><strong>70 sites et
-bases de données accessibles</strong></span> séparément à travers les serveurs
+  par ce site recouvre actuellement plus de <span style="color: #bf153e;"><strong><a href="{% url savoirs.views.informations %}">{{ count }} sites et bases de données accessibles</a></strong></span> séparément à travers les serveurs
 que l'AUF a déployé , notamment grâce à son réseau de campus
 numériques francophones.</span></p>
 <p style="margin-bottom: 0cm;"><span style="color: #000000;">&nbsp;</span></p>
@@ -51,5 +50,6 @@ manifestations scientifiques menées dans votre université ou
 institution, et ce afin de leur donner une plus grande visibilité
 internationale. 
 </span></p>
-<p style="margin-bottom: 0cm;"><span style="color: #000000;">&nbsp;</span></p></div>
+
+</div>
 {% endblock %}
