config nb chercheurs sur accueil et debut fiche chercheur

--- a/auf_savoirs_en_partage/templates/chercheurs/repertoire.html
+++ b/auf_savoirs_en_partage/templates/chercheurs/repertoire.html
@@ -5,7 +5,7 @@
 
 <ul>
 {% for chercheur in chercheurs %}
-    <li><a href="">{{ chercheur }}</a></li>
+    <li><a href="{% url chercheurs.views.retrieve chercheur.id %}">{{ chercheur }}</a></li>
 {% endfor %}
 </ul>
 
