--- a/auf_savoirs_en_partage/media/css/global.css
+++ b/auf_savoirs_en_partage/media/css/global.css
@@ -85,8 +85,9 @@ div.boite-recherche p a:hover { color:#97012c; text-decoration:none;}
 #contenu .demi-gauche img.top { height:9px; position:relative; top:-9px;}
 #contenu .demi-gauche img.bottom { height:9px;  position:relative; bottom:-9px;}
 
-#calendar-links { padding: 0 25px; }
-#calendar-links p { margin: 0px; }
+.contenu-wrapper { padding:0 0 0 25px; }
+
+
 
 ul a { text-decoration:none; }
 ul a:hover { text-decoration:underline; }
