--- a/auf_savoirs_en_partage/templates/render_field.html
+++ b/auf_savoirs_en_partage/templates/render_field.html
@@ -1,14 +1,13 @@
 <tr>
     {% if field.is_hidden %}
-    {{ field }}
-    {% else %}
-    <td{{ field.row_attrs }} class="required" style="width: 150px;">
-        {{ field.label_tag }}
-        {% if field.errors %}
-        {{ field.errors }}
-        {% endif %}
-        </td><td>
         {{ field }}
-    </td>
+    {% else %}
+        <td{{ field.row_attrs }} class="required" style="width: 150px;">
+            {{ field.label_tag }}
+            {% if field.errors %}
+                {{ field.errors }}
+            {% endif %}
+        </td>
+        <td>{{ field }}</td>
     {% endif %}
 </tr>
