--- a/auf_savoirs_en_partage/templates/chercheurs/repertoire.html
+++ b/auf_savoirs_en_partage/templates/chercheurs/repertoire.html
@@ -1,12 +1,7 @@
 {% extends "container_base.html" %}
 
 {% block contenu %}
-<h4>Chercheurs</h4>
 
-<ul>
-{% for chercheur in chercheurs %}
-    <li><a href="">{{ chercheur }}</a></li>
-{% endfor %}
-</ul>
+{% include "chercheurs/rechercher.html" %}
 
 {% endblock %}
