--- a/auf_savoirs_en_partage/templates/chercheurs/retrieve.html
+++ b/auf_savoirs_en_partage/templates/chercheurs/retrieve.html
@@ -3,8 +3,10 @@
 {% block contenu %}
 <h4>{{ chercheur }}</h4>
 
+<div class="contenu-wrapper">
 <p>
 Voici la fiche chercheur de {{ chercheur }}.
 </p>
+</div>
 
 {% endblock %}
