--- a/auf_savoirs_en_partage/templates/chercheurs/rechercher.html
+++ b/auf_savoirs_en_partage/templates/chercheurs/rechercher.html
@@ -7,6 +7,7 @@
 <h4>Chercheurs</h4>
 
 <div class="contenu-wrapper">
+<strong>{{nb_chercheurs}} chercheurs</strong>
 {% paginate %}
 <table>
     <tr>
@@ -18,5 +19,6 @@
     </tr>
 {% endfor %}
 </table>
-</div>
 {% paginate %}
+</div>
+
