--- a/auf_savoirs_en_partage/templates/savoirs/index.html
+++ b/auf_savoirs_en_partage/templates/savoirs/index.html
@@ -62,5 +62,19 @@
         {% endfor %}
         </ul>
     </div>
+    <div class="box">
+        <h4>Sites</h4>
+        <ul class="sous-menu">
+            <li><a href="{% url sites.views.index %}">Sitothèque</a></li>
+        </ul>
+        <ul class="liste-de-l-accueil">
+        {% for site in sites %}
+            <li class="clearfix">
+            <a href="{% url sites.views.retrieve site.id %}" class="le-titre">{{ site }}</a>
+            <span class="la-date">Disciplines : {{ site.discipline }}</span>
+            </li>
+        {% endfor %}
+        </ul>
+    </div>
 </div>
 {% endblock %}
