--- a/auf_savoirs_en_partage/templates/savoirs/index.html
+++ b/auf_savoirs_en_partage/templates/savoirs/index.html
@@ -26,7 +26,9 @@
         <ul class="sous-menu">
             <li><a href="{% url chercheurs.views.repertoire %}">Répertoire</a></li>
             <li><a href="{% url chercheurs.views.inscription %}">Inscription</a></li>
-            <li><a href="">Espace chercheur</a></li>
+            {% if user_chercheur %}
+            <li><a href="{% url chercheurs.views.perso %}">Espace chercheur</a></li>
+            {% endif %}
         </ul>
         <ul class="liste-de-l-accueil">
         {% for chercheur in chercheurs %}
