Edition basique d'un profil

--- a/auf_savoirs_en_partage/templates/chercheurs/perso.html
+++ b/auf_savoirs_en_partage/templates/chercheurs/perso.html
@@ -6,5 +6,8 @@
 <p>
 Bonjour {{ chercheur }}, vous êtes dans votre espace personnel.
 </p>
+<ul class="sous-menu">
+    <li><a href="{% url chercheurs.views.edit %}">Éditer profil</a></li>
+</ul>
 
 {% endblock %}
