--- a/auf_savoirs_en_partage/templates/savoirs/confirmation.html
+++ b/auf_savoirs_en_partage/templates/savoirs/confirmation.html
@@ -6,8 +6,8 @@
 <div id="content-main">
     <h1>{{description}}</h1>
 <ul>
-{% for r in records %}
-<li>[{{r.server}}] {{r.title}}</li>
+{% for o in objects %}
+<li>{{o}}</li>
 {% endfor %}
 </ul>
 </div>
