--- a/auf_savoirs_en_partage/templates/savoirs/index.html
+++ b/auf_savoirs_en_partage/templates/savoirs/index.html
@@ -11,6 +11,9 @@
             <li class="clearfix">
             <span class="la-date">{{ article.date|date:"d F Y" }}</span>
             <a href="{{ article.url }}" class="le-titre">{{ article.titre }}</a>
+            {% if article.source %}
+            <span class="la-date">source: {{ article.source.nom }}</span>
+            {% endif %}
             {% comment %}
             <span class="le-resume">{{ article.texte }} -&nbsp;<a href="{{ article.url }}">Lire</a></span>
             {% endcomment %}
